--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ html, body {
   text-transform: uppercase;
 }
 .hud-sub {
-  margin-top: 4px;
+  margin-top: 6px;
   font-size: 13px;
   color: #bdbdbd;
 }
@@ -181,7 +181,6 @@ html, body {
 
   <div class="hud-buttons">
     <button class="hud-btn" id="btnAdd">Aggiungi referente</button>
-    <button class="hud-btn" id="btnRemove">Rimuovi ultimo referente</button>
     <button class="hud-btn" id="btnToggle">Vedi referenti</button>
   </div>
 
@@ -192,7 +191,7 @@ html, body {
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-/* MAPPA */
+/* MAPPA BASE */
 const map = L.map('map',{ attributionControl:false })
   .setView([45.43,10.99],10);
 
@@ -201,113 +200,271 @@ L.tileLayer(
   { maxZoom:18 }
 ).addTo(map);
 
-/* DATI */
-const referenti = { "Verona": ["Vincenzo R."] };
-const farmacie = [];
+/* DATI IN MEMORIA (provvisori) */
+const referenti = {
+  "Verona": ["Vincenzo R."]
+};
 
-let labels=[], comuni=[], selectedLayer=null, refVisibili=false;
-let farmLayer=L.layerGroup().addTo(map);
+const farmacie = [
+  {
+    nome:"Farmacia Centrale",
+    comune:"Verona",
+    lat:45.438,
+    lng:10.992,
+    tipo:"privata",
+    stato:"accetta",
+    indirizzo:"Via Roma 1",
+    tel:"045 0000001",
+    maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+Centrale+Verona"
+  },
+  {
+    nome:"Farmacia San Zeno",
+    comune:"Verona",
+    lat:45.443,
+    lng:10.980,
+    tipo:"comunale",
+    stato:"in_trattativa",
+    indirizzo:"Piazza Corrubbio",
+    tel:"045 0000002",
+    maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+San+Zeno+Verona"
+  },
+  {
+    nome:"Farmacia Borgo Roma",
+    comune:"Verona",
+    lat:45.389,
+    lng:10.982,
+    tipo:"privata",
+    stato:"da_contattare",
+    indirizzo:"Via Centro 12",
+    tel:"045 0000003",
+    maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+Borgo+Roma+Verona"
+  }
+];
 
-/* HUD refs */
-const hudTitle=document.getElementById('hudTitle');
-const hudSub=document.getElementById('hudSub');
-const refPanel=document.getElementById('refPanel');
-const refList=document.getElementById('refList');
-const btnToggle=document.getElementById('btnToggle');
+/* VARIABILI GLOBALI */
+let labels = [];
+let selectedLayer = null;
+let refVisibili = false;
+let farmLayer = L.layerGroup().addTo(map);
+let comuneLayers = {};   // nomeComune -> layer
 
-const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
-const hasRef=n=>referenti[n] && referenti[n].length>0;
+/* RIFERIMENTI HUD */
+const hudTitle    = document.getElementById('hudTitle');
+const hudSub      = document.getElementById('hudSub');
+const refPanel    = document.getElementById('refPanel');
+const refList     = document.getElementById('refList');
+const btnToggle   = document.getElementById('btnToggle');
+const farmCountEl = document.getElementById('farm-count');
+const cntOkEl     = document.getElementById('cntOk');
+const cntOrfaniEl = document.getElementById('cntOrfani');
 
-/* STYLE UPDATE */
-function aggiornaStileComuni(){
-  map.eachLayer(l=>{
-    if(l.feature){
-      const n=nomeComune(l.feature.properties);
-      l.setStyle({ color: hasRef(n)?'#00ff9c':'#ffaa00' });
-    }
+const nomeComune = p => p.nome || p.DENOM_COM || p.name || 'Comune';
+const hasRef     = n => referenti[n] && referenti[n].length>0;
+
+/* FUNZIONI STILE / CONTATORI */
+function updateComuneStyle(nome) {
+  const layer = comuneLayers[nome];
+  if (!layer) return;
+  layer.setStyle({
+    color: hasRef(nome) ? '#00ff9c' : '#ffaa00',
+    weight: 1,
+    fillOpacity: 0
   });
 }
 
-/* CONTATORI */
 function aggiornaContatori(){
-  const ok=comuni.filter(n=>hasRef(n)).length;
-  document.getElementById('cntOk').innerText=ok;
-  document.getElementById('cntOrfani').innerText=comuni.length-ok;
+  let tot = 0;
+  let ok  = 0;
+  for (const nome in comuneLayers) {
+    tot++;
+    if (hasRef(nome)) ok++;
+  }
+  cntOkEl.innerText     = ok;
+  cntOrfaniEl.innerText = tot - ok;
+}
+
+/* RESET */
+function resetSelezione(){
+  if(selectedLayer){
+    const prevName = nomeComune(selectedLayer.feature.properties);
+    updateComuneStyle(prevName);
+  }
+  selectedLayer = null;
+  hudTitle.innerText = 'Provincia di Verona';
+  hudSub.innerText   = 'Vista generale';
+  farmLayer.clearLayers();
+  farmCountEl.innerText = '0 farmacie';
+  refPanel.style.display = 'none';
+  refVisibili = false;
+  btnToggle.innerText = 'Vedi referenti';
+}
+
+/* LABELS */
+function aggiornaLabels(){
+  const z = map.getZoom();
+  Object.values(comuneLayers).forEach(layer => {
+    const label = layer._labelMarker;
+    if (!label) return;
+    if(!selectedLayer && z >= 9 && z <= 12){
+      if(!map.hasLayer(label)) map.addLayer(label);
+    } else {
+      if(map.hasLayer(label)) map.removeLayer(label);
+    }
+  });
 }
 
 /* COMUNI */
-fetch('data/comuni_verona.json').then(r=>r.json()).then(data=>{
-  const layer=L.geoJSON(data,{
-    style:f=>{
-      const n=nomeComune(f.properties);
-      if(!comuni.includes(n)) comuni.push(n);
-      return { color: hasRef(n)?'#00ff9c':'#ffaa00', weight:1, fillOpacity:0 };
-    },
-    onEachFeature:(f,l)=>{
-      const nome=nomeComune(f.properties);
-      const lab=L.marker(l.getBounds().getCenter(),{
-        icon:L.divIcon({className:'label-comune',html:nome}),
-        interactive:false
-      }).addTo(map);
-      labels.push(lab);
-      l.on('click',()=>selezionaComune(l,nome));
-    }
-  }).addTo(map);
-  map.fitBounds(layer.getBounds());
-  aggiornaContatori();
-});
+fetch('data/comuni_verona.json')
+  .then(r => r.json())
+  .then(data => {
 
-/* SELEZIONE */
+    const layer = L.geoJSON(data,{
+      style: f => {
+        const n = nomeComune(f.properties);
+        return {
+          color: hasRef(n) ? '#00ff9c' : '#ffaa00',
+          weight: 1,
+          fillOpacity: 0
+        };
+      },
+      onEachFeature:(f,layer) => {
+        const nome = nomeComune(f.properties);
+        comuneLayers[nome] = layer;
+
+        const center = layer.getBounds().getCenter();
+        const label = L.marker(center,{
+          icon: L.divIcon({
+            className:'label-comune',
+            html: nome,
+            iconSize:[120,16]
+          }),
+          interactive:false
+        }).addTo(map);
+
+        layer._labelMarker = label;
+
+        layer.on('click', () => selezionaComune(layer,nome));
+      }
+    }).addTo(map);
+
+    map.fitBounds(layer.getBounds());
+    aggiornaContatori();
+    aggiornaLabels();
+
+    map.on('zoomend', () => {
+      const z = map.getZoom();
+      if(selectedLayer && z < 9.5){
+        resetSelezione();
+      }
+      aggiornaLabels();
+    });
+  });
+
+/* SELEZIONE COMUNE */
 function selezionaComune(layer,nome){
   if(selectedLayer){
-    const p=nomeComune(selectedLayer.feature.properties);
-    selectedLayer.setStyle({ color:hasRef(p)?'#00ff9c':'#ffaa00', weight:1 });
+    const prev = nomeComune(selectedLayer.feature.properties);
+    updateComuneStyle(prev);
   }
-  selectedLayer=layer;
-  layer.setStyle({ color:'#fff', weight:3 });
-  map.fitBounds(layer.getBounds(),{padding:[40,40]});
-  hudTitle.innerText='Comune di '+nome;
-  hudSub.innerText='Referenti presenti: '+(referenti[nome]?.length||0);
-  labels.forEach(l=>map.removeLayer(l));
+
+  selectedLayer = layer;
+  layer.setStyle({
+    color:'#ffffff',
+    weight:3,
+    fillOpacity:0
+  });
+
+  map.fitBounds(layer.getBounds(),{ padding:[40,40] });
+
+  hudTitle.innerText = 'Comune di ' + nome;
+  hudSub.innerText   = hasRef(nome)
+    ? 'Referenti presenti: ' + referenti[nome].length
+    : '⚠ Comune orfano';
+
+  // nascondi labels quando lavoro su un singolo comune
+  Object.values(comuneLayers).forEach(l => {
+    if (l._labelMarker && map.hasLayer(l._labelMarker)) {
+      map.removeLayer(l._labelMarker);
+    }
+  });
+
+  mostraFarmacie(nome);
 }
 
-/* REFERENTI */
-btnAdd.onclick=()=>{
-  if(!selectedLayer) return alert('Seleziona un comune');
-  const nome=hudTitle.innerText.replace('Comune di ','');
-  const n=prompt('Nome referente');
+/* FARMACIE PER COMUNE */
+function mostraFarmacie(comune){
+  farmLayer.clearLayers();
+  const vis = farmacie.filter(f => f.comune === comune);
+  farmCountEl.innerText = vis.length + ' farmacie';
+
+  vis.forEach(f => {
+    const simbolo = f.tipo === 'privata'
+      ? `<div class="dot ${f.stato}"></div>`
+      : `<div class="triangle ${f.stato}"></div>`;
+
+    const popupHtml = `
+      <strong>${f.nome}</strong><br/>
+      ${f.tipo} – ${f.indirizzo}<br/>
+      Tel: ${f.tel}<br/>
+      <a href="${f.maps}" target="_blank">Apri in Maps</a><br/>
+      <a href="https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm" target="_blank">
+        Materiali campagna
+      </a>
+    `;
+
+    const m = L.marker([f.lat,f.lng],{
+      icon: L.divIcon({ html: simbolo, iconSize:[14,14], className:'' })
+    }).bindPopup(popupHtml);
+
+    farmLayer.addLayer(m);
+  });
+}
+
+/* REFERENTI: AGGIUNGI */
+document.getElementById('btnAdd').onclick = () => {
+  if(!selectedLayer){
+    alert('Seleziona prima un comune sulla mappa');
+    return;
+  }
+  const nomeComuneSel = hudTitle.innerText.replace('Comune di ','');
+  const n = prompt('Inserisci il tuo nome (verrà mostrato come referente)');
   if(!n) return;
-  referenti[nome]=(referenti[nome]||[]).concat(n);
-  hudSub.innerText='Referenti presenti: '+referenti[nome].length;
-  aggiornaStileComuni();
+  if(!referenti[nomeComuneSel]) referenti[nomeComuneSel] = [];
+  referenti[nomeComuneSel].push(n);
+  hudSub.innerText = 'Referenti presenti: ' + referenti[nomeComuneSel].length;
+
+  // aggiorna stile e contatori
+  updateComuneStyle(nomeComuneSel);
   aggiornaContatori();
+
+  if(refVisibili) mostraReferenti(nomeComuneSel);
 };
 
-btnRemove.onclick=()=>{
-  if(!selectedLayer) return alert('Seleziona un comune');
-  const nome=hudTitle.innerText.replace('Comune di ','');
-  if(!referenti[nome]||!referenti[nome].length) return;
-  referenti[nome].pop();
-  hudSub.innerText='Referenti presenti: '+referenti[nome].length;
-  aggiornaStileComuni();
-  aggiornaContatori();
-};
+/* REFERENTI: TOGGLE VEDI/NASCONDI */
+document.getElementById('btnToggle').onclick = () => {
+  refVisibili = !refVisibili;
+  btnToggle.innerText = refVisibili ? 'Nascondi referenti' : 'Vedi referenti';
 
-btnToggle.onclick=()=>{
-  refVisibili=!refVisibili;
-  btnToggle.innerText=refVisibili?'Nascondi referenti':'Vedi referenti';
-  if(refVisibili && selectedLayer) mostraReferenti(hudTitle.innerText.replace('Comune di ',''));
-  else refPanel.style.display='none';
+  if(refVisibili && selectedLayer){
+    const nomeComuneSel = hudTitle.innerText.replace('Comune di ','');
+    mostraReferenti(nomeComuneSel);
+  } else {
+    refPanel.style.display = 'none';
+  }
 };
 
 function mostraReferenti(nome){
-  refList.innerHTML='';
-  (referenti[nome]||[]).forEach(r=>{
-    const li=document.createElement('li'); li.textContent=r; refList.appendChild(li);
+  refList.innerHTML = '';
+  const lista = referenti[nome] || [];
+  lista.forEach(r => {
+    const li = document.createElement('li');
+    li.textContent = r;
+    refList.appendChild(li);
   });
-  refPanel.style.display='block';
+  refPanel.style.display = lista.length ? 'block' : 'none';
 }
 </script>
 
 </body>
 </html>
+
